--- a/client/index.html
+++ b/client/index.html
@@ -117,7 +117,7 @@
                   <strong>Error</strong> Impossible de charger le fichier JSON.
                 </div>
 
-                <form action="/upload" method="post" id="uploadform" enctype="multipart/form-data">
+                <form action="upload" method="post" id="uploadform" enctype="multipart/form-data">
                   <p><input type="file" name="file" id="file"></p>
                   <p><button type="submit" class="btn btn-primary" type="button">Submit</button></p>
                 </form>
@@ -205,7 +205,7 @@
         }
       }
       $.ajax({
-        url: '/upload',
+        url: 'upload',
         type: 'POST',
         data: formData,
         async: false,
