--- a/client/index.html
+++ b/client/index.html
@@ -205,7 +205,7 @@
         }
       }
       $.ajax({
-        url: 'upload',
+        url: '/apps/budgup/upload',
         type: 'POST',
         data: formData,
         async: false,
